--- a/assets/scss/content/_form.scss
+++ b/assets/scss/content/_form.scss
@@ -83,7 +83,7 @@ input:not([type="checkbox"], [type="radio"], [type="range"]) {
 }
 
 fieldset {
-	margin: 0 0 var(--spacing);
+	margin: 0 0 var(--form-element-spacing-vertical);
 	padding: 0;
 	border: 0;
 }
@@ -91,7 +91,7 @@ fieldset {
 label,
 fieldset legend {
 	display: block;
-	margin-bottom: calc(var(--spacing) * 0.25);
+	margin-bottom: calc(var(--form-element-spacing-vertical) * 0.25);
 
 	&:last-child {
 		margin-bottom: 0;
@@ -108,7 +108,7 @@ input:not([type="checkbox"], [type="radio"], [type="range"], [type="file"]),
 select,
 textarea {
 	appearance: none;
-	padding: var(--form-element-spacing-vertical) var(--form-element-spacing-horizontal);
+	padding: var(--spacing) var(--spacing);
 }
 
 input,
@@ -194,7 +194,7 @@ select:invalid {
 input:not([type="checkbox"], [type="radio"]),
 select,
 textarea {
-	margin-bottom: var(--spacing);
+	margin-bottom: var(--form-element-spacing-vertical);
 }
 
 select {
@@ -204,10 +204,7 @@ select {
 	}
 
 	&:not([multiple], [size]) {
-		padding-right: calc(var(--form-element-spacing-horizontal) + 1.5rem);
-		padding-left: var(--form-element-spacing-horizontal);
-		padding-top: var(--form-element-spacing-horizontal);
-		padding-bottom: calc(var(--form-element-spacing-horizontal) + 1.5rem);
+		padding: var(--spacing) calc(var(--spacing) + 1.5rem) calc(var(--spacing) + 1.5rem) var(--spacing);
 		background-image: var(--icon-chevron);
 		background-position: center right 0.75rem;
 		background-size: 1rem auto;
@@ -227,14 +224,14 @@ select {
 	+ small {
 		display: block;
 		width: 100%;
-		margin-top: calc(var(--spacing) * -0.75);
-		margin-bottom: var(--spacing);
+		margin-top: calc(var(--form-element-spacing-vertical) * -0.75);
+		margin-bottom: var(--form-element-spacing-vertical);
 		color: hsl(205, 10%, 50%);
 	}
 }
 
 label {
 	> :where(input, select, textarea) {
-		margin-top: calc(var(--spacing) * 0.25);
+		margin-top: calc(var(--form-element-spacing-vertical) * 0.25);
 	}
 }
